# celery-salt

./: .gitignore  CELERYSALT_DESIGN.md  CHANGELOG.md  CHANGES.md  CLASS_BASED_EVENT_API_DESIGN.md  DESIGN_ALTERNATIVES.md  IMPLEMENTATION_CONTEXT.md  IMPLEMENTATION_PLAN_CLASS_BASED_EVENTS.md  NEXT_STEPS.md  PUBLISHING.md  README.md  RPC_IMPLEMENTATION.md  VERSIONING_STRATEGY.md  publish.sh  pyproject.toml
.github/workflows/: test.yml
CelerySaltContext/: CELERYSALT_DESIGN.md  CONVERSATION_EXPORT.md  conversation_transcript.txt
celery_salt/: __init__.py
celery_salt/core/: __init__.py  decorators.py  event_utils.py  events.py  exceptions.py  registry.py  versioning.py
celery_salt/django/: __init__.py  apps.py  celery.py  decorators.py  mixins.py  signals.py
celery_salt/integrations/: client.py  dispatcher.py  producer.py  registry.py
celery_salt/logging/: formatters.py  handlers.py  validation_errors.py
celery_salt/metrics/: collectors.py  exporters.py
celery_salt/utils/: __init__.py  error_handling.py  response_handler.py
celerysalt/: __init__.py  serverless_producer.py
celerysalt/core/: __init__.py  decorators.py  registry.py
celerysalt/django/: __init__.py  celery.py  decorators.py  mixins.py  signals.py
celerysalt/integrations/: client.py  dispatcher.py  producer.py  registry.py
celerysalt/logging/: __init__.py  formatters.py  handlers.py
celerysalt/metrics/: __init__.py  collectors.py  exporters.py
docs/: CELERY_CONFIG_TEMPLATE.md  CELERY_OPTIONS_IMPLEMENTATION_PLAN.md  CONTEXT_PROVIDER_GENERALIZATION.md  CONTEXT_PROVIDER_GUIDE.md  CUSTOM_EVENT_CLASS_EXAMPLE.md  DEBUG_DISPATCHER.md  DECORATOR_CHANGES_SUMMARY.md  DECORATOR_ENHANCEMENTS_README.md  EVENT_AUTHORIZATION_QUICK_REF.md  EVENT_CLASS_UNIFIED_API.md  EXTENDED_CELERY_USAGE.md  OBSERVABILITY.md  PYDANTIC_SUPPORT_IMPLEMENTATION_PLAN.md  SIMPLIFICATION_SUMMARY.md  TROUBLESHOOTING_RPC_HANDLERS.md  TYPING_SUBSCRIBER_EVENTS.md
examples/: .gitignore  README.md  docker-compose.yml
tests/: django_settings.py  test_decorators_real.py  test_event_utils_real.py  test_events_real.py  test_handler_registry.py  test_integration.py  test_registry.py  test_validation_errors.py  test_versioning.py
(+12 files in other folders)
